test: ajustes nos testes e cobertura